search for male / female and hide irrelevant searchfields in cph
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@36974 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -68,6 +68,7 @@ Editor.Search.Label.Life.born=geboren
 Editor.Search.Label.Life.died=gestorben
 Editor.Search.Label.Professor.after=Berufung nach
 Editor.Search.Label.Professor.before=Ausscheiden vor
+Editor.Search.Label.Sex=Geschlecht
 Editor.Search.label.Timespan=Zeitraum:
 
 Login.ChangeUserID=Catalogus Professorum: Nutzerkennung wechseln
