neues Datenfeld Namensvarianten Trennung von wissenschaftlichen Mitgliedschaften und nicht-wissenschaftlichen (sonstigen) Mitgliedschaften URL zur Arbeitsmappe
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@37463 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -88,7 +88,7 @@ OMD.profkat.fieldofstudies=Lehr- und <br />Forschungsgebiete
 OMD.profkat.subjects=Fachgebiet
 OMD.profkat.emails=E-Mail-Adresse
 OMD.profkat.homepages=Homepage
-OMD.profkat.surnames=Namensvarianten
+OMD.profkat.variantnames=Namensvarianten
 OMD.profkat.firstnames=weitere Vornamen
 OMD.profkat.lifetimes=Lebensdaten
 OMD.profkat.birthplace=geboren in
@@ -125,6 +125,7 @@ OMD.derivatelabel.profkat_person.display_biography=als Biogr. Artikel anzeigen
 OMD.derivatelabel.profkat_person.display_none = keine Anzeige
 
 OMD.profkat.nameaffixes=Namenszusatz
+OMD.profkat.variantnames=Namensvarianten
 OMD.profkat.subjectsM=Fachgebiets-<br/>klassifikation (*)
 OMD.profkat.fieldofstudiesM=Lehr- und Forschungsgebiete (*)
 OMD.profkat.professorshipsM=Professuren (*)
@@ -255,6 +256,8 @@ OMD.profkat.otherfunction.=
 
 OMD.profkat.memberships=Mitgliedschaften
 OMD.profkat.scientific_memberships=wissenschaftliche <br />Mitgliedschaften
+OMD.profkat.other_memberships=weitere <br />Mitgliedschaften
+scientific_memberships
 OMD.profkat.membership.=
 OMD.profkat.membership.scientific=wissenschaftlich
 OMD.profkat.membership.party=in einer Partei
@@ -402,6 +405,7 @@ OMD.profkat.lifetimes.info=Geburtsdatum und -ort, Sterbedatum und -ort (ggf. Reg
 OMD.profkat.link2page.info=permanenter Link zu dieser Seite; Bitte nur diese Internetadresse für Zitate und Verlinkungen benutzen\!\!\!
 OMD.profkat.mainpublications.info=Auswahl von einigen Publikationen: "Hauptwerke", umfangreichere oder neuere Arbeiten oder solche, die repräsentativ für die verschiedenen Forschungsfelder sind
 OMD.profkat.scientific_memberships.info=Mitgliedschaften in wissenschaftlichen und anderen Gesellschaften, Vereinen, Akademien etc.
+OMD.profkat.other_memberships.info=Mitgliedschaften in weiteren, gesellschaftlichen Vereinigungen
 OMD.profkat.mothers.info=Name, ggf. Lebensjahre und/oder Beruf der Mutter
 OMD.profkat.onlineres.info=Verknüpfung zu weiteren Internet-Ressourcen über die GND-Nummer.
 OMD.profkat.otherfunctions.info=Ämter, Funktionen, Tätigkeiten in Wissenschaft, Politik, Wirtschaft, Gesellschaft, Kultur etc.
@@ -413,5 +417,5 @@ OMD.profkat.references.info=Autobiographien, ausführlichere und neuere biographi
 OMD.profkat.sex.info=Angaben zum Geschlecht
 OMD.profkat.sources.info=hauptsächlich für die Erstellung des Eintrags verwendete Quellen: "eigene Angaben" der Professoren bzw. Angehöriger, Personalakten und Literatur
 OMD.profkat.subjects.info=Zuordnung zu einem oder mehreren Fachgebieten gemäß einer Fachgebietssystematik (in Anlehnung an die Basisklassifikation des GVK)
-OMD.profkat.surnames.info=abweichende Nachnamensformen, Pseudonyme, Namensänderungen, Geburtsnamen, Latinisierungen bzw. deutsche Formen
+OMD.profkat.variantnames.info=abweichende Nachnamensformen, Pseudonyme, Namensänderungen, Geburtsnamen, Latinisierungen bzw. deutsche Formen
 
