--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -100,6 +100,7 @@ OMD.profkat.confessions=Konfession
 OMD.profkat.profarea=Berufungsgebiet
 
 OMD.profkat.otherinfos=weitere Informationen
+OMD.profkat.internalinfos=Interne Bemerkungen
 OMD.profkat.mainpublications=Werke (Auswahl)
 OMD.profkat.bibliographicrefs=Nachweis von <br />Publikationen
 OMD.profkat.complexrefs=Komplexe Verlinkung
