fix derivate list (label + css)
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@37489 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -118,12 +118,12 @@ OMD.profkat.onlineres=Internet-Ressourcen
 
 OMD.profkat.membership.party=Parteimitgliedschaft
 
-OMD.derivatelabel.profkat_person=default,display_portrait,display_signature,display_biography,display_none
-OMD.derivatelabel.profkat_person.default=
-OMD.derivatelabel.profkat_person.display_portrait=als Portrait anzeigen
-OMD.derivatelabel.profkat_person.display_signature=als Unterschrift anzeigen
-OMD.derivatelabel.profkat_person.display_biography=als Biogr. Artikel anzeigen
-OMD.derivatelabel.profkat_person.display_none = keine Anzeige
+OMD.derivatedisplay.profkat_person=default,display_portrait,display_signature,display_biography,display_none
+OMD.derivatedisplay.profkat_person.default=
+OMD.derivatedisplay.profkat_person.display_portrait=als Portrait anzeigen
+OMD.derivatedisplay.profkat_person.display_signature=als Unterschrift anzeigen
+OMD.derivatedisplay.profkat_person.display_biography=als Biogr. Artikel anzeigen
+OMD.derivatedisplay.profkat_person.display_none = keine Anzeige
 
 OMD.profkat.nameaffixes=Namenszusatz
 OMD.profkat.variantnames=Namensvarianten
