--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -118,12 +118,11 @@ OMD.profkat.onlineres=Internet-Ressourcen
 
 OMD.profkat.membership.party=Parteimitgliedschaft
 
-OMD.derivatedisplay.profkat_person=default,display_portrait,display_signature,display_biography,display_none
-OMD.derivatedisplay.profkat_person.default=
-OMD.derivatedisplay.profkat_person.display_portrait=als Portrait anzeigen
-OMD.derivatedisplay.profkat_person.display_signature=als Unterschrift anzeigen
-OMD.derivatedisplay.profkat_person.display_biography=als Biogr. Artikel anzeigen
-OMD.derivatedisplay.profkat_person.display_none = keine Anzeige
+OMD.derivatedisplay.default=
+OMD.derivatedisplay.display_portrait=als Portrait anzeigen
+OMD.derivatedisplay.display_signature=als Unterschrift anzeigen
+OMD.derivatedisplay.display_biography=als Biogr. Artikel anzeigen
+OMD.derivatedisplay.display_none = keine Anzeige
 
 OMD.profkat.nameaffixes=Namenszusatz
 OMD.profkat.variantnames=Namensvarianten
