workflow and editor
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@38038 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -36,7 +36,7 @@ Nav.Logout=Logout
 Nav.WF.Edit=Bearbeiten
 WF.Preview=<span class="glyphicon glyphicon-blackboard"></span>&#160;&#160;&#160;<strong>Vorschau</strong>
 WF.Preview.return=zurück zur Arbeitsmappe ...
-
+WF.workspace.headline.profkat=Professor*innen bearbeiten
 Nav.AdminMenue=Administration
 Nav.Admin.Profkat=Administration Profkat
 WF.professorum=Workflow Professoren
@@ -149,10 +149,10 @@ OMD.profkat.hint.nameSurname=Nachname
 OMD.profkat.hint.nameFirstnameM=Vorname (*)
 OMD.profkat.hint.nameFirstname=Vorname
 OMD.profkat.hint.nameTitle=akad. Titel
-OMD.profkat.hint.dateShown=Datum (angezeigt)
-OMD.profkat.hint.dateFrom=Datum (nicht vor)
-OMD.profkat.hint.dateTo=Datum (nicht nach)
-OMD.profkat.hint.profType=Typ der Professur
+OMD.profkat.hint.dateShown=Datum<br/>(angezeigt)
+OMD.profkat.hint.dateFrom=Datum<br/>(nicht vor)
+OMD.profkat.hint.dateTo=Datum<br/>(nicht nach)
+OMD.profkat.hint.profType=Typ der Professur 
 OMD.profkat.hint.profTitle=Titel der Professur
 OMD.profkat.hint.linkurl=Link (URL)
 OMD.profkat.hint.linktitle=Link (Title)
