docdetails modified (requests from Braunschweig)
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@38049 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -81,6 +81,7 @@ OMD.profkat.name=Name
 OMD.profkat.nameM=Name (*)
 OMD.profkat.academictitles=akademischer Titel
 OMD.profkat.professorships=Prof. in Rostock
+OMD.profkat.professorships.predec_succ=(Vorgänger, Nachfolger)
 OMD.profkat.faculties=Fakultät
 OMD.profkat.facultiesM=Fakultät (*)
 OMD.profkat.institutes=Institut
