--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -34,7 +34,7 @@ Nav.Login=Login
 Nav.UserDetails=Aktueller Nutzer
 Nav.Logout=Logout
 Nav.WF.Edit=Bearbeiten
-WF.Preview=<span class="glyphicon glyphicon-blackboard"></span>&#160;&#160;&#160;<strong>Vorschau</strong>
+WF.Preview=<i class="fas fa-desktop"></i>&#160;&#160;&#160;<strong>Vorschau</strong>
 WF.Preview.return=zurück zur Arbeitsmappe ...
 WF.workspace.headline.profkat=Professor*innen bearbeiten
 Nav.AdminMenue=Administration
