add entry diverse to OMD.profkat.sex

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -186,6 +186,7 @@ OMD.profkat.sexM=Geschlecht (*)
 OMD.profkat.sex.unknown=unbekannt
 OMD.profkat.sex.male=männlich
 OMD.profkat.sex.female=weiblich
+OMD.profkat.sex.diverse=divers
 
 OMD.profkat.families=Familie
 OMD.profkat.family.=
