message properties for sortfields

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -45,6 +45,11 @@ Nav.WorkflowFileUpload=Datei hochladen
 Nav.Admin.Processes=Liste der Workflowprozesse
 Nav.Admin.EditWebcontent=Statische Webseiteninhalte bearbeiten
 
+Browse.Sort.profkat.proftime_ibis=Professur bis
+Browse.Sort.profkat.proftime_ivon=Professur von/seit
+Browse.Sort.profkat.idx_profname.headline=Name, Vorname
+Browse.Sort.profkat.modified=letzte Änderung
+			
 Editor.Search.Label.AllMeta=in allen Datenfeldern
 Editor.Search.Label.ProfNames=Name
 Editor.Search.Label.Historigin=Fakultät/Sektion
