#2 status, epoch, type wieder ergänzt

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -291,6 +291,8 @@ OMD.profkat.type=Personentyp
 #OMD.profkat.show-gbv-links.false=nicht anzeigen
 #OMD.profkat.show-gbv-links.true=anzeigen
 
+OMD.profkat.classification=Einordnung
+
 OMD.profkat.created_changed=eingestellt&#160;/&#160;geändert
 
 
