#2 Vorstand als Rolle in der akad. Selbstverwaltung

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -245,6 +245,7 @@ OMD.profkat.adminfunction.direktor=Direktor (Institut, Fachbereich, Klinik)
 OMD.profkat.adminfunction.prorektor=Prorektor
 OMD.profkat.adminfunction.prodekan=Prodekan, Stellv. Sektionsdirektor
 OMD.profkat.adminfunction.stellvdirektor=Stellv. Direktor (Institut, Fachbereich, Klinik)
+OMD.profkat.adminfunction.vorstand=Vorstand
 OMD.profkat.adminfunction.other=andere
 
 #CPB:
