#4 Link mit Anzahl der Dokumente in der Digibib der TUBS

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -295,8 +295,6 @@ OMD.profkat.type=Personentyp
 OMD.profkat.classification=Einordnung
 
 OMD.profkat.created_changed=eingestellt&#160;/&#160;geändert
-
-
 OMD.profkat.link.external=Link öffnen
 OMD.profkat.link.internal=RosDok-Dokument öffnen
 
@@ -308,6 +306,8 @@ OMD.profkat.dissertationTitle=Titel der Arbeit
 OMD.profkat.derivatelabel=Dokumentanhang (Bezeichner)
 OMD.profkat.parentprofession=Beruf der Eltern
 OMD.profkat.references_short=weitere Literatur
+
+OMD.profkat.cpb.documents_in_digibib=Dokumente in der Digitalen Bibliothek der TU Braunschweig
 
 OMD.common.born=geboren
 OMD.common.died=gestorben
