add spouse (Ehepartner/in) for related persons

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -200,6 +200,7 @@ OMD.profkat.family.father=Vater
 OMD.profkat.family.mother=Mutter
 OMD.profkat.family.husband=Ehemann
 OMD.profkat.family.wife=Ehefrau
+OMD.profkat.family.spouse=Ehepartner/-in
 OMD.profkat.family.son=Sohn
 OMD.profkat.family.daughter=Tochter
 OMD.profkat.family.brother=Bruder
