--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -203,8 +203,10 @@ OMD.profkat.family.wife=Ehefrau
 OMD.profkat.family.spouse=Ehepartner/-in
 OMD.profkat.family.son=Sohn
 OMD.profkat.family.daughter=Tochter
+OMD.profkat.family.children=Kinder
 OMD.profkat.family.brother=Bruder
 OMD.profkat.family.sister=Schwester
+OMD.profkat.family.siblings=Geschwister
 OMD.profkat.family.father_in_law=Schwiegervater	
 OMD.profkat.family.son_in_law=Schwiegersohn
 
