fix search urls (prefix: /do/search)

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -325,18 +325,11 @@ Webpage.docdetails.tabs.data=Katalogeintrag
 Webpage.docdetails.tabs.article=Biographie
 Webpage.docdetails.tabs.documents=Dokumente/Anhang
 
-Webpage.searchresults.sort-title_cpr=Name, Vorname
-Webpage.searchresults.sort-rostockdate-from=in Rostock von / seit
-Webpage.searchresults.sort-rostockdate-to=in Rostock bis
-Webpage.searchresults.sort-cpr_histfac_sort=Fakultät
-     
-Webpage.searchresults.sortfield.class_fac_sort=Fakultät
-Webpage.searchresults.sortfield.profstates=Status
-Webpage.searchresults.sortfield.modified=letzte Änderung
-Webpage.searchresults.sortfield.profkat.idx_profname.headline=Name, Vorname
-Webpage.searchresults.sortfield.profkat.proftime_ivon=in Rostock von / seit
-Webpage.searchresults.sortfield.profkat.proftime_ibis=in Rostock bis
-
+Webpage.Searchresult.Sort.Label.profkat.idx_profname.headline=Name, Vorname
+Webpage.Searchresult.Sort.Label.profkat.proftime_ivon=in Rostock von / seit
+Webpage.Searchresult.Sort.Label.profkat.proftime_ibis=in Rostock bis
+Webpage.Searchresult.Sort.Label.profkat.status_msg=Bearbeitungsstatus
+Webpage.Searchresult.Sort.Label.modified=letzte Änderung
 
 Webpage.error.Error=Fehler
 Webpage.gotoContents=zum Seiteninhalt springen
