renamed search result labels

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -336,12 +336,12 @@ Webpage.gotoContents=zum Seiteninhalt springen
 
 Webpage.indexbrowser.profname.title=Personen von A - Z
 Webpage.indexbrowser.profname.intro=Dieser Index enthält die Namen der Personen, die im Professorenkatalog aufgeführt sind.
-Webpage.searchresult.person.label.profkat.academictitle=akadem. Titel
-Webpage.searchresult.person.label.profkat.period=Prof. in Rostock
-Webpage.searchresult.person.label.profkat.last_professorship=zuletzt
-Webpage.searchresult.person.label.profkat.last_faculty=zuletzt
-Webpage.searchresult.person.label.profkat.state_msg=Status
-Webpage.searchresult.person.label.profkat.lifetime=Lebensdaten
+Webpage.Searchresult.person.Label.profkat.academictitle=akadem. Titel
+Webpage.Searchresult.person.Label.profkat.period=Prof. in Rostock
+Webpage.Searchresult.person.Label.profkat.last_professorship=zuletzt
+Webpage.Searchresult.person.Label.profkat.last_faculty=zuletzt
+Webpage.Searchresult.person.Label.profkat.state_msg=Status
+Webpage.Searchresult.person.Label.profkat.lifetime=Lebensdaten
 
 Webpage.classbrowser.institution.title=Über Fakultäten/Sektionen browsen
 Webpage.classbrowser.subject.title=Über Fachgebiete browsen
