#6 docdetails to xslt3 email, homepage

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -90,7 +90,7 @@ OMD.profkat.professorships.predec_succ=(Vorgänger, Nachfolger)
 OMD.profkat.faculties=Fakultät
 OMD.profkat.facultiesM=Fakultät (*)
 OMD.profkat.institutes=Institut
-OMD.profkat.fieldofstudies=Lehr- und <br />Forschungsgebiete
+OMD.profkat.fieldofstudies=Lehr- und Forschungsgebiete
 OMD.profkat.subjects=Fachgebiet
 OMD.profkat.emails=E-Mail-Adresse
 OMD.profkat.homepages=Homepage
