--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -143,7 +143,7 @@ OMD.profkat.periodsM=Zeitraum gesamt (*)
 OMD.profkat.quoting=Empfohlene Zitierweise
 
 OMD.profkat.quoting.text=Eintrag von &quot;{0}&quot; im Professorenkatalog,<br /> URL\: <a href\="{1}">{2}</a> (abgerufen am {3})
-OMD.profkat.quoting.gnd=[GND-Link auf diese Seite: <a href\="{0}">{0}</a>]
+OMD.profkat.quoting.gnd=GND-Link auf diese Seite
 
 OMD.profkat.hint.predec=Vorgänger
 OMD.profkat.hint.succ=Nachfolger
