add some missing message properties

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -1,9 +1,11 @@
-
+Nav.Application=Professorenkatalog
 Nav.Start=Start
+Nav.Startpage=Start
 
 Nav.Profkat.Index=Personenindex
 Nav.Profkat.Epochs=Epochenzugang
 Nav.Profkat.Aktuelles=Aktuelles
+Nav.Profkat.AboutUs=Über uns
 
 Nav.Profkat.Search=Suche
 Nav.Profkat.Search.Simple=Einfach
