improve layout + css of metadata editor #12

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -51,7 +51,8 @@ Browse.Sort.profkat.proftime_ibis=Professur bis
 Browse.Sort.profkat.proftime_ivon=Professur von/seit
 Browse.Sort.profkat.idx_profname.headline=Name, Vorname
 Browse.Sort.profkat.modified=letzte Änderung
-			
+
+Editor.Common.headline = Die mit * gekennzeichneten Daten sind Pflichtfelder.<br /> Mit den Buttons (+ - &#8593; &#8595;) können Sie zusätzliche Eingabefelder (und -gruppen) wiederholen sowie deren Reihenfolge ändern.			
 Editor.Search.Label.AllMeta=in allen Datenfeldern
 Editor.Search.Label.ProfNames=Name
 Editor.Search.Label.Historigin=Fakultät/Sektion
@@ -157,9 +158,9 @@ OMD.profkat.hint.nameSurname=Nachname
 OMD.profkat.hint.nameFirstnameM=Vorname (*)
 OMD.profkat.hint.nameFirstname=Vorname
 OMD.profkat.hint.nameTitle=akad. Titel
-OMD.profkat.hint.dateShown=Datum<br/>(angezeigt)
-OMD.profkat.hint.dateFrom=Datum<br/>(nicht vor)
-OMD.profkat.hint.dateTo=Datum<br/>(nicht nach)
+OMD.profkat.hint.dateShown=Datum (angezeigt)
+OMD.profkat.hint.dateFrom=Datum (nicht vor)
+OMD.profkat.hint.dateTo=Datum (nicht nach)
 OMD.profkat.hint.profType=Typ der Professur 
 OMD.profkat.hint.profTitle=Titel der Professur
 OMD.profkat.hint.linkurl=Link (URL)
