--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -122,10 +122,8 @@ OMD.profkat.otherprofessorships=Weitere Professuren
 OMD.profkat.link2page=Link auf diese Seite
 OMD.profkat.onlineres=Internet-Ressourcen
 
-
-
-
 OMD.profkat.membership.party=Parteimitgliedschaft
+OMD.showLargerImage=größeres Bild anzeigen
 
 OMD.derivatedisplay.default=
 OMD.derivatedisplay.display_portrait=als Portrait anzeigen
