add missing infopopup properties

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -396,6 +396,7 @@ OMD.profkat.adminfunctions.info=Ämter und Funktionen an der Univ. Rostock währen
 OMD.profkat.awards.info=wichtigere wissenschaftliche und andere Auszeichnungen, Preise; Ehrendoktorate, -professoren, -mitgliedschaften
 OMD.profkat.bibliographicrefs.info=Verknüpfung zu Datenbanken, die Publikationen des Professors nachweisen, v.a. Gemeinsamer Verbundkatalog (GVK), Rostocker Universitätsbibliographie, Landesbibliographie M-V, Katalog der Deutschen Nationalbibliothek (DNB), Portale, die ebenfalls die GND nutzen, sonstige Fachdatenbanken
 OMD.profkat.biographics.info=möglichst lückenlose Aufführung der hauptsächlichen Lebensstationen: Schule/Abitur, Ausbildung/Studium mit Fächern und Studienorten, berufliche Tätigkeiten/Karriere, sonstige wichtige Informationen
+OMD.profkat.classification.info=Zuweisung einer Klassifikationen zur Gruppierung nach unterschiedlichen Kriterien
 OMD.profkat.confessions.info=bis einschließlich des 19. Jahrhunderts nur \u201Elutherisch\u201C, \u201Ereformiert\u201C, \u201Ekatholisch\u201C angegeben
 OMD.profkat.created_changed.info=Datum und Benutzername der Erstellung und letzten Bearbeitung des Eintrags
 OMD.profkat.derobjects.info=Dokumente mit weiterführenden Informationen zur Person, Anzeige/Download als eigene Dateien (meist pdf, jpg): Bild, Lebenslauf, Schriftenverzeichnis, Scans von Dokumenten aus den Personalakten, Digitalisate von biographischer Literatur (Nachrufe, Laudationes, kleinere Artikel)
@@ -417,6 +418,7 @@ OMD.profkat.mothers.info=Name, ggf. Lebensjahre und/oder Beruf der Mutter
 OMD.profkat.onlineres.info=Verknüpfung zu weiteren Internet-Ressourcen über die GND-Nummer.
 OMD.profkat.otherfunctions.info=Ämter, Funktionen, Tätigkeiten in Wissenschaft, Politik, Wirtschaft, Gesellschaft, Kultur etc.
 OMD.profkat.otherinfos.info=sonstige Angaben, die wichtig erscheinen, aber nicht in die Rubriken einzuordnen sind
+OMD.profkat.partymembers.info=Zugehörigkeit zu einer politischen Partei
 OMD.profkat.professorships.info=alle Professuren/Dozenturen, Neu- und Umberufungen an der Univ. Rostock, mit Angabe der genauen Zeiträume (Jahre) und Berufungs-/Fachgebiete; bei nicht an der Univ. beschäftigten "externen" (Honorar-, apl.-, Titular-) Professoren Angabe nur des Ernennungsjahres
 OMD.profkat.pubres.info=Verküpfung zu weiteren Publikationsdatenbanken über die PND-Nummer.
 OMD.profkat.quoting.info=Verwenden Sie bitte folgende Form, wenn Sie diese Webseite zitieren.
