update some message properties

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -62,7 +62,7 @@ Editor.Search.Label.SubjectProf=Fachklassifikation
 Editor.Search.Label.ProfTypes=Art der Professur
 Editor.Search.Label.Epochs=Epoche
 Editor.Search.Label.ProfStates=Status des Eintrages
-Editor.Search.Label.Professortime=Professor in Rostock
+Editor.Search.Label.Professortime=Professur
 Editor.Search.Label.Professortime.from=Berufung
 Editor.Search.Label.Professortime.to=Ausscheiden
 Editor.Search.Label.Lifetime=gelebt
@@ -88,7 +88,7 @@ Login.ChangeUserID=Catalogus Professorum: Nutzerkennung wechseln
 OMD.profkat.name=Name
 OMD.profkat.nameM=Name (*)
 OMD.profkat.academictitles=akademischer Titel
-OMD.profkat.professorships=Prof. in Rostock
+OMD.profkat.professorships=Prof. an Beispiel-Uni
 OMD.profkat.professorships.predec_succ=(Vorgänger, Nachfolger)
 OMD.profkat.faculties=Fakultät
 OMD.profkat.facultiesM=Fakultät (*)
@@ -327,8 +327,8 @@ Webpage.docdetails.tabs.article=Biographie
 Webpage.docdetails.tabs.documents=Dokumente/Anhang
 
 Webpage.Searchresult.Sort.Label.profkat.idx_profname.headline=Name, Vorname
-Webpage.Searchresult.Sort.Label.profkat.proftime_ivon=in Rostock von / seit
-Webpage.Searchresult.Sort.Label.profkat.proftime_ibis=in Rostock bis
+Webpage.Searchresult.Sort.Label.profkat.proftime_ivon=an der Univ. von / seit
+Webpage.Searchresult.Sort.Label.profkat.proftime_ibis=an der Univ. bis
 Webpage.Searchresult.Sort.Label.profkat.status_msg=Bearbeitungsstatus
 Webpage.Searchresult.Sort.Label.modified=letzte Änderung
 
@@ -338,7 +338,7 @@ Webpage.gotoContents=zum Seiteninhalt springen
 Webpage.indexbrowser.profname.title=Personen von A - Z
 Webpage.indexbrowser.profname.intro=Dieser Index enthält die Namen der Personen, die im Professorenkatalog aufgeführt sind.
 Webpage.Searchresult.person.Label.profkat.academictitle=akadem. Titel
-Webpage.Searchresult.person.Label.profkat.period=Prof. in Rostock
+Webpage.Searchresult.person.Label.profkat.period=Prof. an der Univ.
 Webpage.Searchresult.person.Label.profkat.last_professorship=zuletzt
 Webpage.Searchresult.person.Label.profkat.last_faculty=zuletzt
 Webpage.Searchresult.person.Label.profkat.state_msg=Status
@@ -392,7 +392,7 @@ WF.professorum.taskCompleteDocumentAndSendToLibrary=Absenden der vollständigen D
 
 OMD.profkat.academicdegrees.info=akademische Ausbildung anhand der erworbenen Abschlüsse: Art, Jahr, akad. Grad, ggf. Fachgebiet, Hochschule, ggf. Titel der Qualifikationsarbeit
 OMD.profkat.academictitles.info=aktueller bzw. zuletzt gültiger, vollständiger akademischer Titel
-OMD.profkat.adminfunctions.info=Ämter und Funktionen an der Univ. Rostock während der Professur: Rektor, Prorektor, Dekan, Prodekan, Sektionsdirektor, Leiter von Instituten, Kliniken, Laboren etc.; Mitglied in Gremien (Senat, Konzil etc.) und Kommissionen, Tätigkeiten in Studien- und Forschungsorganisationen
+OMD.profkat.adminfunctions.info=Ämter und Funktionen an der Universität während der Professur: Rektor, Prorektor, Dekan, Prodekan, Sektionsdirektor, Leiter von Instituten, Kliniken, Laboren etc.; Mitglied in Gremien (Senat, Konzil etc.) und Kommissionen, Tätigkeiten in Studien- und Forschungsorganisationen
 OMD.profkat.awards.info=wichtigere wissenschaftliche und andere Auszeichnungen, Preise; Ehrendoktorate, -professoren, -mitgliedschaften
 OMD.profkat.bibliographicrefs.info=Verknüpfung zu Datenbanken, die Publikationen des Professors nachweisen, v.a. Gemeinsamer Verbundkatalog (GVK), Rostocker Universitätsbibliographie, Landesbibliographie M-V, Katalog der Deutschen Nationalbibliothek (DNB), Portale, die ebenfalls die GND nutzen, sonstige Fachdatenbanken
 OMD.profkat.biographics.info=möglichst lückenlose Aufführung der hauptsächlichen Lebensstationen: Schule/Abitur, Ausbildung/Studium mit Fächern und Studienorten, berufliche Tätigkeiten/Karriere, sonstige wichtige Informationen
@@ -403,7 +403,7 @@ OMD.profkat.derobjects.info=Dokumente mit weiterführenden Informationen zur Pers
 OMD.profkat.documents.info=Anzeige von Volltexten oder digitalen Faksimiles von vorhandenen Kurzbiographien direkt in der Detailansicht des Eintrags (Dokumenteinträge)
 OMD.profkat.emails.info=
 OMD.profkat.faculties.info=alle Zugehörigkeiten zu Fakultäten/Sektionen gemäß einer historischen Fakultätensystematik, mit Angabe der genauen Zeiträume der Zugehörigkeit
-OMD.profkat.families.info=Lebensdaten und Beruf der Eltern sowie anderer relevanter Verwandter, insbesondere innerhalb der Rostocker Professorenschaft
+OMD.profkat.families.info=Lebensdaten und Beruf der Eltern sowie anderer relevanter Verwandter, insbesondere innerhalb der Professorenschaft der Universität
 OMD.profkat.fathers.info=Name, ggf. Lebensjahre und/oder Beruf des Vaters
 OMD.profkat.fieldofstudies.info=frei formulierte Stichworte zu Schwerpunkten der wiss. Tätigkeit
 OMD.profkat.firstnames.info=Nennung weiterer Vornamen in Reihenfolge gemäß der Quellen
@@ -419,7 +419,7 @@ OMD.profkat.onlineres.info=Verknüpfung zu weiteren Internet-Ressourcen über die 
 OMD.profkat.otherfunctions.info=Ämter, Funktionen, Tätigkeiten in Wissenschaft, Politik, Wirtschaft, Gesellschaft, Kultur etc.
 OMD.profkat.otherinfos.info=sonstige Angaben, die wichtig erscheinen, aber nicht in die Rubriken einzuordnen sind
 OMD.profkat.partymembers.info=Zugehörigkeit zu einer politischen Partei
-OMD.profkat.professorships.info=alle Professuren/Dozenturen, Neu- und Umberufungen an der Univ. Rostock, mit Angabe der genauen Zeiträume (Jahre) und Berufungs-/Fachgebiete; bei nicht an der Univ. beschäftigten "externen" (Honorar-, apl.-, Titular-) Professoren Angabe nur des Ernennungsjahres
+OMD.profkat.professorships.info=alle Professuren/Dozenturen, Neu- und Umberufungen an der Universität mit Angabe der genauen Zeiträume (Jahre) und Berufungs-/Fachgebiete; bei nicht an der Univ. beschäftigten "externen" (Honorar-, apl.-, Titular-) Professoren Angabe nur des Ernennungsjahres
 OMD.profkat.pubres.info=Verküpfung zu weiteren Publikationsdatenbanken über die PND-Nummer.
 OMD.profkat.quoting.info=Verwenden Sie bitte folgende Form, wenn Sie diese Webseite zitieren.
 OMD.profkat.references.info=Autobiographien, ausführlichere und neuere biographische Literatur, Verknüpfungen mit im Internet verfügbaren Digitalisaten, Lexika, biographischen Datenbanken etc. (DBE, DBA(WBIS), Achtung: zum Teil lizenzpflichtig und zurzeit nur aus dem Univ.-Netz verfügbar)
