add message property for browser tab of default search

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -351,8 +351,7 @@ Webpage.classbrowser.epoch.title=Über Epochen browsen
 Webpage.search.title.profkat-simple=Einfache Suche
 Webpage.search.title.profkat-extended=Erweiterte Suche
 Webpage.search.title.profkat-bar=Suche
-
-
+Webpage.search.title.=Suche
 
 Webpage.editor.title.simple=Einfache Suche über die Daten im Professorenkatalog
 Webpage.editor.title.extended=Erweiterte Suche über die Daten im Professorenkatalog
