--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -280,9 +280,12 @@ OMD.profkat.award.=
 OMD.profkat.identifiers=Externe IDs
 OMD.profkat.identifiersM=Externe IDs (*)
 
+OMD.profkat.identifier=Weitere Identifikatoren
 OMD.profkat.identifier.=
-OMD.profkat.identifier.gnd=GND-Nr.
+OMD.profkat.identifier.gnd=GND
 OMD.profkat.identifier.nognd=Eintrag noch nicht mit der Gemeinsamen Normdatei (GND) verknüpft.
+OMD.profkat.identifier.viaf=VIAF
+OMD.profkat.identifier.orcid=ORCID
 
 OMD.profkat.partymembers=Parteimitgliedschaften
 OMD.profkat.partymember=,
