integrate entityfacts by DNB #18

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -314,6 +314,8 @@ OMD.profkat.derivatelabel=Dokumentanhang (Bezeichner)
 OMD.profkat.parentprofession=Beruf der Eltern
 OMD.profkat.references_short=weitere Literatur
 
+OMD.profkat.entityfacts_provided_by_DNB=Informationen bereitgestellt von <a href="https://www.dnb.de/DE/Professionell/Metadatendienste/Datenbezug/Entity-Facts/entityFacts_node.html">DNB Entity Facts</a>.
+
 OMD.profkat.cpb.documents_in_digibib=Dokumente in der Digitalen Bibliothek der TU Braunschweig
 
 OMD.common.born=geboren
