Umbenennung des Labels für references #18
neu: weitere Literatur und Online-Ressourcen

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -114,7 +114,8 @@ OMD.profkat.mainpublications=Werke (Auswahl)
 OMD.profkat.bibliographicrefs=Nachweis von <br />Publikationen
 OMD.profkat.complexrefs=Komplexe Verlinkung
 OMD.profkat.sources=Quellen
-OMD.profkat.references=weitere Literatur
+OMD.profkat.references=weitere Literatur und Online-Ressourcen
+OMD.profkat.references_short=weitere Ressourcen
 OMD.profkat.documents=Dokument
 OMD.profkat.derobjects=Anhang
 OMD.profkat.epoch=Epoche
@@ -312,7 +313,6 @@ OMD.profkat.view.dnb.notfound=Kein Eintrag in der Personennamendatei (PND) vorha
 OMD.profkat.dissertationTitle=Titel der Arbeit
 OMD.profkat.derivatelabel=Dokumentanhang (Bezeichner)
 OMD.profkat.parentprofession=Beruf der Eltern
-OMD.profkat.references_short=weitere Literatur
 
 OMD.profkat.entityfacts_provided_by_DNB=Informationen bereitgestellt von <a href="https://www.dnb.de/DE/Professionell/Metadatendienste/Datenbezug/Entity-Facts/entityFacts_node.html">DNB Entity Facts</a>.
 
