Neues Feld (Klassifikation) "Art des Ausscheidens" #19

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -95,6 +95,7 @@ OMD.profkat.facultiesM=Fakultät (*)
 OMD.profkat.institutes=Institut
 OMD.profkat.fieldofstudies=Lehr- und Forschungsgebiete
 OMD.profkat.subjects=Fachgebiet
+OMD.profkat.departure=Art des Ausscheidens
 OMD.profkat.emails=E-Mail-Adresse
 OMD.profkat.homepages=Homepage
 OMD.profkat.variantnames=Namensvarianten
@@ -407,6 +408,7 @@ OMD.profkat.derobjects.info=Dokumente mit weiterführenden Informationen zur Pers
 OMD.profkat.documents.info=Anzeige von Volltexten oder digitalen Faksimiles von vorhandenen Kurzbiographien direkt in der Detailansicht des Eintrags (Dokumenteinträge)
 OMD.profkat.emails.info=
 OMD.profkat.faculties.info=alle Zugehörigkeiten zu Fakultäten/Sektionen gemäß einer historischen Fakultätensystematik, mit Angabe der genauen Zeiträume der Zugehörigkeit
+OMD.profkat.departure.info=Informationen zum Grund des Verlassens der Universität (z.B. Emeritierung)
 OMD.profkat.families.info=Lebensdaten und Beruf der Eltern sowie anderer relevanter Verwandter, insbesondere innerhalb der Professorenschaft der Universität
 OMD.profkat.fathers.info=Name, ggf. Lebensjahre und/oder Beruf des Vaters
 OMD.profkat.fieldofstudies.info=frei formulierte Stichworte zu Schwerpunkten der wiss. Tätigkeit
