use type-attribute for internal_info #18
(Göttingen, Liste der Bearbeiter)

--- a/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/messages_de.properties
@@ -293,6 +293,8 @@ OMD.profkat.partymembers=Parteimitgliedschaften
 OMD.profkat.partymember=,
 OMD.profkat.partymember.=
 
+OMD.profkat.internalinfo.=
+OMD.profkat.internalinfo.editor=Bearbeiter:in
 
 
 OMD.profkat.typeM=Personentyp (*)
